Change some footer CSS values to try and fix visual alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,9 +72,10 @@
     font-size: 150%;
     font-family: 'Alegreya Sans SC', sans-serif;
     text-align: left;
-    margin: 13% auto;
+    margin: auto;
     padding: 5%;
     color: #000;
+    float: left;
   }
 
   .social-networks {
@@ -86,7 +87,8 @@
   }
   .social-networks i {
     font-size: 150%;
-    margin: 13% auto;
+    float: right;
+    margin: 30px auto;
     padding: 5%;
     color: #FF715B;
   }
